--- a/src/uplod.html
+++ b/src/uplod.html
@@ -58,7 +58,7 @@
               </li>
               <li class="nav-link">
                 <a href="admin.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user"></i> Admin</a
+                  ><i class="fa-solid fa-user"></i> User Management</a
                 >
               </li>
               <li class="nav-link">
@@ -97,7 +97,7 @@
                 class="d-flex gap-4 items-center list-unstyled mb-3 uplodDataLink"
               >
                 <li><a href="#" id="bps" class="active">BPS</a></li>
-                <li><a href="#" id="uncom">UNCOMTRADE</a></li>
+                <li><a href="#" id="uncom">KNIME</a></li>
               </ul>
               <!-- content -->
               <div class="d-flex gap-4 d-block" id="bpsDiv">
@@ -221,7 +221,7 @@
               </div>
               <div class="d-flex gap-4 d-none" id="uncomDiv">
                 <div class="bg-white p-4 w-75">
-                  <h6 class="fw-bold mb-1 fs-5">Upload Data UNCOMTRADE</h6>
+                  <h6 class="fw-bold mb-1 fs-5">Upload Data KNIME</h6>
                   <p class="text-black-50 text-light">
                     Please provide details of this file.
                   </p>
