--- a/src/editArtikel.html
+++ b/src/editArtikel.html
@@ -58,7 +58,7 @@
               </li>
               <li class="nav-link">
                 <a href="admin.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user"></i> Admin</a
+                  ><i class="fa-solid fa-user"></i> User Management</a
                 >
               </li>
               <li class="nav-link">
