add page download and changes languages

--- a/src/addAdmin.html
+++ b/src/addAdmin.html
@@ -53,23 +53,28 @@
               </li>
               <li class="nav-link">
                 <a href="uplod.html" class="d-block p-2"
-                  ><i class="fa-solid fa-upload"></i> Upload</a
+                  ><i class="fa-solid fa-upload"></i> Unggah</a
+                >
+              </li>
+              <li class="nav-link">
+                <a href="download.html" class="d-block p-2"
+                  ><i class="fa-solid fa-user"></i> Download</a
                 >
               </li>
               <li class="nav-link active">
                 <a href="admin.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user"></i> User Management</a
+                  ><i class="fa-solid fa-user"></i> Menejemen User</a
                 >
               </li>
               <li class="nav-link">
                 <a href="roleManagement.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user-cog"></i> Management Role</a
+                  ><i class="fa-solid fa-user-cog"></i> Peran</a
                 >
               </li>
             </ul>
             <div class="logout-submenu">
               <a href="index.html" class="d-block p-2"
-                ><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</a
+                ><i class="fa-solid fa-arrow-right-from-bracket"></i> Keluar</a
               >
             </div>
           </div>
@@ -91,10 +96,10 @@
           </div>
           <!-- content -->
           <div class="px-5 mt-4">
-            <h5 class="fw-bold fs-4">Admin</h5>
+            <h5 class="fw-bold fs-4">Menejemen User</h5>
 
             <div class="bg-white p-4 mt-4">
-              <h6 class="fw-bold mb-1 fs-5">Add New Admin</h6>
+              <h6 class="fw-bold mb-1 fs-5">Tambah Baru Admin</h6>
 
               <div class="gap-4 my-4 justify-content-between">
                 <div class="d-flex row gy-4 col-12 align-items-center">
