--- a/src/editArtikel.html
+++ b/src/editArtikel.html
@@ -53,23 +53,28 @@
               </li>
               <li class="nav-link">
                 <a href="uplod.html" class="d-block p-2"
-                  ><i class="fa-solid fa-upload"></i> Upload</a
+                  ><i class="fa-solid fa-upload"></i> Unggah</a
+                >
+              </li>
+              <li class="nav-link">
+                <a href="download.html" class="d-block p-2"
+                  ><i class="fa-solid fa-user"></i> Download</a
                 >
               </li>
               <li class="nav-link">
                 <a href="admin.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user"></i> User Management</a
+                  ><i class="fa-solid fa-user"></i> Menejemen User</a
                 >
               </li>
               <li class="nav-link">
                 <a href="roleManagement.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user-cog"></i> Management Role</a
+                  ><i class="fa-solid fa-user-cog"></i> Peran</a
                 >
               </li>
             </ul>
             <div class="logout-submenu">
               <a href="index.html" class="d-block p-2"
-                ><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</a
+                ><i class="fa-solid fa-arrow-right-from-bracket"></i> Keluar</a
               >
             </div>
           </div>
@@ -272,10 +277,10 @@
                   </div>
                 </div>
                 <div class="bg-white p-3 w-25 h-25">
-                  <h5 class="fs-5 fw-bold mb-2">Creatae New Artikel</h5>
+                  <h5 class="fs-5 fw-bold mb-2">Edit Artikel</h5>
                   <p class="fs-6 text-black-50">
-                    There are three different section on this page. Product
-                    details, Product variants and Product pack sizes.
+                    Masukan data artikel berikut dengan judul , tipe artikel ,
+                    deskripsi artikel , dan gambar pada artikel
                   </p>
                 </div>
               </div>
