--- a/src/roleManagement.html
+++ b/src/roleManagement.html
@@ -53,23 +53,28 @@
               </li>
               <li class="nav-link">
                 <a href="uplod.html" class="d-block p-2"
-                  ><i class="fa-solid fa-upload"></i> Upload</a
+                  ><i class="fa-solid fa-upload"></i> Unggah</a
+                >
+              </li>
+              <li class="nav-link">
+                <a href="download.html" class="d-block p-2"
+                  ><i class="fa-solid fa-user"></i> Download</a
                 >
               </li>
               <li class="nav-link">
                 <a href="admin.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user"></i> User Management</a
+                  ><i class="fa-solid fa-user"></i> Menejemen User</a
                 >
               </li>
               <li class="nav-link active">
                 <a href="roleManagement.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user-cog"></i> Management Role</a
+                  ><i class="fa-solid fa-user-cog"></i> Peran</a
                 >
               </li>
             </ul>
             <div class="logout-submenu">
               <a href="index.html" class="d-block p-2"
-                ><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</a
+                ><i class="fa-solid fa-arrow-right-from-bracket"></i> Keluar</a
               >
             </div>
           </div>
@@ -93,7 +98,7 @@
           <div class="px-5 mt-4">
             <div class="container mt-5">
               <div
-                class="d-flex justify-content-between align-items-center mb-5"
+                class="d-flex justify-content-between align-items-center mb-3"
               >
                 <div>
                   <h5 class="fw-bold fs-4">Management Role</h5>
@@ -113,7 +118,7 @@
                   <div class="d-flex row mt-4 gy-4 col-12 align-items-center">
                     <div class="col-2">
                       <label for="exampleFormControlInput1" class="form-label"
-                        >Permission</label
+                        >Nama Role</label
                       >
                     </div>
                     <div class="col-10">
@@ -228,7 +233,7 @@
                       class="btn btn-danger"
                       data-bs-toggle="modal"
                       data-bs-target="#staticBackdrop"
-                      >Delete</a
+                      >Hapus</a
                     >
                     <a
                       href="#"
@@ -236,7 +241,7 @@
                       id="saveRole"
                       data-bs-toggle="modal"
                       data-bs-target="#saveBtn"
-                      >Save Changes</a
+                      >Simpan</a
                     >
                   </div>
                   <!-- Modal -->
