--- a/src/uplod.html
+++ b/src/uplod.html
@@ -53,17 +53,22 @@
               </li>
               <li class="nav-link active">
                 <a href="uplod.html" class="d-block p-2"
-                  ><i class="fa-solid fa-upload"></i> Upload</a
+                  ><i class="fa-solid fa-upload"></i> Unggah</a
+                >
+              </li>
+              <li class="nav-link">
+                <a href="download.html" class="d-block p-2"
+                  ><i class="fa-solid fa-user"></i> Download</a
                 >
               </li>
               <li class="nav-link">
                 <a href="admin.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user"></i> User Management</a
+                  ><i class="fa-solid fa-user"></i> Menejemen User</a
                 >
               </li>
               <li class="nav-link">
                 <a href="roleManagement.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user-cog"></i> Management Role</a
+                  ><i class="fa-solid fa-user-cog"></i> Peran</a
                 >
               </li>
             </ul>
@@ -212,18 +217,19 @@
                   </div>
                 </div>
                 <div class="bg-white p-3 w-25 h-25">
-                  <h5 class="fs-5 fw-bold mb-2">Upload File</h5>
+                  <h5 class="fs-5 fw-bold mb-2">Unggah File</h5>
                   <p class="fs-6 text-black-50">
-                    There are three different section on this page. Product
-                    details, Product variants and Product pack sizes.
+                    Unggah data dari masing masing file berikut
                   </p>
                 </div>
               </div>
               <div class="d-flex gap-4 d-none" id="uncomDiv">
                 <div class="bg-white p-4 w-75">
-                  <h6 class="fw-bold mb-1 fs-5">Upload Data KNIME</h6>
+                  <h6 class="fw-bold mb-1 fs-5">
+                    Unggah data dari masing masing file berikut
+                  </h6>
                   <p class="text-black-50 text-light">
-                    Please provide details of this file.
+                    Unggah data dari masing masing file berikut
                   </p>
                   <div class="d-flex gap-4 my-4 justify-content-between">
                     <div class="col-12">
