--- a/src/download.html
+++ b/src/download.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add - Artikel</title>
+    <title>Edit - Artikel</title>
   </head>
   <body style="background-color: #f9f9f9">
     <!-- link bootstrap css -->
@@ -46,7 +46,7 @@
                   <i class="fa-solid fa-file-lines"></i> Artikel</a
                 >
               </li>
-              <li class="nav-link active">
+              <li class="nav-link">
                 <a href="ebook.html" class="d-block p-2"
                   ><i class="fa-solid fa-book"></i> E-Book</a
                 >
@@ -56,7 +56,7 @@
                   ><i class="fa-solid fa-upload"></i> Unggah</a
                 >
               </li>
-              <li class="nav-link">
+              <li class="nav-link active">
                 <a href="download.html" class="d-block p-2"
                   ><i class="fa-solid fa-user"></i> Download</a
                 >
@@ -66,6 +66,7 @@
                   ><i class="fa-solid fa-user"></i> Menejemen User</a
                 >
               </li>
+
               <li class="nav-link">
                 <a href="roleManagement.html" class="d-block p-2"
                   ><i class="fa-solid fa-user-cog"></i> Peran</a
@@ -96,79 +97,120 @@
           </div>
           <!-- content -->
           <div class="px-5 mt-4">
-            <div class="container mt-5">
-              <h5 class="fw-bold mb-4 fs-4">E - Book</h5>
-              <div class="d-flex gap-4">
-                <div class="bg-white p-4 w-75">
-                  <h6 class="fw-bold mb-1 fs-5">Add New E - Book</h6>
-                  <p class="text-black-50 text-light">
-                    Please provide details of this product.
-                  </p>
-                  <div class="d-flex gap-4 my-4 justify-content-between">
-                    <div class="col-12 col-md-7">
-                      <label for="exampleFormControlInput1" class="form-label"
-                        >Judul Artikel</label
-                      >
-                      <input
-                        type="email"
-                        class="form-control"
-                        id="exampleFormControlInput1"
-                        placeholder="Ekspor Indonesia Terus Melanjutkan Kinerja Positif"
-                      />
-                    </div>
-                    <div class="col-12 col-md-4">
-                      <label for="dropdownTipe"> Tipe Arikel </label>
-                      <select
-                        class="form-select form-select-md"
-                        aria-label=".form-select-sm example"
-                        id="dropdownTipe"
-                      >
-                        <option selected>Artikel</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                      </select>
-                    </div>
+            <div class="mt-5 w-100">
+              <div
+                class="d-flex justify-content-between align-items-center mb-3"
+              >
+                <div>
+                  <h5 class="fw-bold fs-4">Download</h5>
+                </div>
+              </div>
+              <div class="bg-white p-4 mt-4">
+                <div class="">
+                  <h5 class="fw-bold fs-4">Download Data</h5>
+                  <p class="text-black-50 fw-light">Data Comtrade Final</p>
+                </div>
+                <div class="gap-4 my-4 justify-content-between">
+                  <label for="exampleFormControlInput1" class="form-label mb-2"
+                    >Nama Komoditas</label
+                  >
+                  <select name="" class="form-select" id="permision">
+                    <option value="" selected>Udang</option>
+                    <option value="">Lobster</option>
+                    <option value="">Tripia</option>
+                    <option value="">Nila</option>
+                  </select>
+                </div>
+                <div class="d-flex justify-content-between gap-4">
+                  <div class="w-100">
+                    <label
+                      for="exampleFormControlInput1"
+                      class="form-label mb-2"
+                      >Tahun Awal</label
+                    >
+                    <select name="permision" class="form-select" id="permision">
+                      <option value="Master-Admin" selected>2021</option>
+                      <option value="">2019</option>
+                      <option value="">2020</option>
+                      <option value="">2022</option>
+                      <option value="">2023</option>
+                      <option value="">2024</option>
+                    </select>
                   </div>
-
-                  <div class="mt-4">
-                    <div class="mb-1">
-                      Upload Image <span class="text-danger">*</span>
-                    </div>
-                    <div class="card-body">
-                      <div
-                        id="dropZone"
-                        class="mb-3"
-                        ondragover="handleDragOver(event)"
-                        ondragleave="handleDragLeave(event)"
-                        ondrop="handleDrop(event)"
-                      >
-                        <p class="mb-0 mt-5">
-                          <i class="fas fa-cloud-upload-alt fa-3x"></i><br />
-                          Drop here to attach or upload
-                        </p>
-                        <input
-                          type="file"
-                          id="fileInput"
-                          accept="image/*"
-                          style="display: none"
-                        />
-                      </div>
-                      <p class="text-muted mb-0">Max size: 10 MB</p>
-                    </div>
-                  </div>
-                  <div class="mt-4">
-                    <hr />
-                    <div class="justify-content-end mt-4 text-end">
-                      <a href="#" class="btn btn-primary">Update</a>
-                    </div>
+                  <div class="w-100">
+                    <label
+                      for="exampleFormControlInput1"
+                      class="form-label mb-2"
+                      >Tahun Akhir</label
+                    >
+                    <select name="permision" class="form-select" id="permision">
+                      <option value="Master-Admin" selected>2024</option>
+                      <option value="">2019</option>
+                      <option value="">2020</option>
+                      <option value="">2021</option>
+                      <option value="">2022</option>
+                      <option value="">2023</option>
+                    </select>
                   </div>
                 </div>
-                <div class="bg-white p-3 w-25 h-25">
-                  <h5 class="fs-5 fw-bold mb-2">Buat baru E-bookl</h5>
-                  <p class="fs-6 text-black-50">
-                    Masukan data file e-book yang ingin di unggah
-                  </p>
+                <div class="mt-4">
+                  <hr />
+                  <div class="justify-content-end mt-4 text-end d-flex gap-4">
+                    <a
+                      href="#"
+                      class="btn btn-primary"
+                      id="saveRole"
+                      data-bs-toggle="modal"
+                      data-bs-target="#saveBtn"
+                      >Download</a
+                    >
+                  </div>
+
+                  <!-- Modal -->
+                  <div
+                    class="modal fade"
+                    id="saveBtn"
+                    data-bs-backdrop="static"
+                    data-bs-keyboard="false"
+                    tabindex="-1"
+                    aria-labelledby="staticBackdropLabel"
+                    aria-hidden="true"
+                  >
+                    <div class="modal-dialog modal-dialog-centered mx-auto">
+                      <div class="modal-content text-center">
+                        <div class="modal-header">
+                          <div></div>
+                          <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"
+                          ></button>
+                        </div>
+                        <div class="modal-body">
+                          <h1
+                            class="modal-title fs-5 fw-bold mb-3"
+                            id="staticBackdropLabel"
+                          >
+                            Anda yakin ?
+                          </h1>
+                          Apakah Anda yakin ingin download file ini?
+                        </div>
+                        <div class="modal-footer gap-3">
+                          <button
+                            type="button"
+                            class="btn btn-outline-primary w-25"
+                            data-bs-dismiss="modal"
+                          >
+                            Batal
+                          </button>
+                          <button type="button" class="btn btn-primary w-25">
+                            Simpan
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
